...
import com.android.sample.ui.common.BottomNavigationButtons
import com.android.sample.ui.theme.PaddingMedium

object EditOrganizationTestTags {
  const val ROOT = "editOrganizationScreenRoot"
  const val NEW_ORGANIZATION_NAME_TEXT_FIELD = "newOrganizationNameTextField"
  const val EDIT_BUTTON = "editButton"
  const val BACK_BUTTON = "backButton"
}

@Composable
fun EditOrganizationScreen(
    editOrganizationViewModel: EditOrganizationViewModel = viewModel(),
...
